RESOLVED FIXED57832
[Qt] Fix timeoutTimer of MiniBrowser's UrlLoader
https://bugs.webkit.org/show_bug.cgi?id=57832
Summary [Qt] Fix timeoutTimer of MiniBrowser's UrlLoader
Zoltan Horvath
Reported 2011-04-05 05:37:09 PDT
Only QWKPage has loadFinished signal so connect to it instead of BrowserWindow.
Attachments
proposed fix (1.37 KB, patch)
2011-04-05 05:38 PDT, Zoltan Horvath
kling: review+
Zoltan Horvath
Comment 1 2011-04-05 05:38:18 PDT
Created attachment 88207 [details] proposed fix
Zoltan Horvath
Comment 2 2011-04-05 05:44:29 PDT
WebKit Review Bot
Comment 3 2011-04-05 06:14:02 PDT
http://trac.webkit.org/changeset/82927 might have broken Windows Release (Build) and Windows Debug (Build)
Note You need to log in before you can comment on or make changes to this bug.