[Qt] Fix timeoutTimer of MiniBrowser's UrlLoader https://bugs.webkit.org/show_bug.cgi?id=57832

Reviewed by Andreas Kling.

Only QWKPage has loadFinished signal so connect to it instead of BrowserWindow.

* MiniBrowser/qt/UrlLoader.cpp:
(UrlLoader::UrlLoader):

Canonical link: https://commits.webkit.org/72711@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82927 268f45cc-cd09-0410-ab3c-d52691b4dbfc